--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -1,3 +1,6 @@
 {
-  "title": "Título español"
+  "title": "Título español",
+  "hero-title-1": "Bienvenido a",
+  "hero-title-2": "Núcleo",
+  "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante."
 }
