created languageSelector dropdown

--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -1,6 +1,6 @@
 {
   "title": "English title",
-  "hero-title-1": "Bienvenido a",
-  "hero-title-2": "Núcleo",
+  "hero-title-1": "Welcome to",
+  "hero-title-2": "Nucleo",
   "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante."
 }
