hero last touches

--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -2,5 +2,6 @@
   "title": "English title",
   "hero-title-1": "Welcome to",
   "hero-title-2": "Nucleo",
-  "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante."
+  "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante.",
+  "idioma": "Language"
 }
