--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -3,5 +3,7 @@
   "hero-title-1": "Bienvenido a",
   "hero-title-2": "Núcleo",
   "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante.",
-  "idioma": "Idioma"
+  "idioma": "Idioma",
+  "comprar": "Comprar",
+  "vender": "Vender"
 }
