--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -3,5 +3,7 @@
   "hero-title-1": "Welcome to",
   "hero-title-2": "Nucleo",
   "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante.",
-  "idioma": "Language"
+  "idioma": "Language",
+  "comprar": "Buy",
+  "vender": "Sell"
 }
