--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -5,5 +5,6 @@
   "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante.",
   "idioma": "Language",
   "comprar": "Buy",
-  "vender": "Sell"
+  "vender": "Sell",
+  "section-flats-title": "Opportunities"
 }
