--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -5,5 +5,6 @@
   "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante.",
   "idioma": "Idioma",
   "comprar": "Comprar",
-  "vender": "Vender"
+  "vender": "Vender",
+  "section-flats-title": "Oportunidades"
 }
