added 2 bottom sections

--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -6,5 +6,11 @@
   "idioma": "Language",
   "comprar": "Buy",
   "vender": "Sell",
-  "section-flats-title": "Opportunities"
+  "section-flats-title": "Opportunities",
+  "enviar": "Send",
+  "email": "Email",
+  "newsletter-title": "Subscribe to our newsletter",
+  "blog-showcase-title": "Nosotros nos encargamos de inspirarte",
+  "blog-showcase-subtitle": "Sé el primero en conocer las últimas tendencias, los mejores rincones de Alicante y mucho más",
+  "habitaciones": "rooms"
 }
