--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -6,5 +6,11 @@
   "idioma": "Idioma",
   "comprar": "Comprar",
   "vender": "Vender",
-  "section-flats-title": "Oportunidades"
+  "section-flats-title": "Oportunidades",
+  "enviar": "Enviar",
+  "email": "Correo electrónico",
+  "newsletter-title": "Suscríbete a nuestra Newsletter",
+  "blog-showcase-title": "Nosotros nos encargamos de inspirarte",
+  "blog-showcase-subtitle": "Sé el primero en conocer las últimas tendencias, los mejores rincones de Alicante y mucho más",
+  "habitaciones": "habitaciones"
 }
