--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -12,5 +12,9 @@
   "newsletter-title": "Subscribe to our newsletter",
   "blog-showcase-title": "Nosotros nos encargamos de inspirarte",
   "blog-showcase-subtitle": "Sé el primero en conocer las últimas tendencias, los mejores rincones de Alicante y mucho más",
-  "habitaciones": "rooms"
+  "habitaciones": "rooms",
+  "nucleo-sl": "© 2020 Núcleo S.L.",
+  "aviso-legal": "Terms of Service",
+  "politica-datos": "Privacy",
+  "politica-cookies": "Cookies"
 }
