--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -12,5 +12,9 @@
   "newsletter-title": "Suscríbete a nuestra Newsletter",
   "blog-showcase-title": "Nosotros nos encargamos de inspirarte",
   "blog-showcase-subtitle": "Sé el primero en conocer las últimas tendencias, los mejores rincones de Alicante y mucho más",
-  "habitaciones": "habitaciones"
+  "habitaciones": "habitaciones",
+  "nucleo-sl": "© 2020 Núcleo S.L.",
+  "aviso-legal": "Aviso legal",
+  "politica-datos": "Protección de datos",
+  "politica-cookies": "Política de cookies"
 }
