--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -1,39 +1,39 @@
 {
-  "title": "English title",
+  "title": "Properties in Alicante | Inmobiliaria Nucleo",
   "hero-title-1": "Welcome to",
-  "hero-title-2": "Nucleo",
-  "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante.",
+  "hero-title-2": "Inmobiliaria Núcleo",
+  "hero-subtitle": "We advise you either with the sale or with the purchase of real estate in Alicante.",
   "idioma": "Language",
   "comprar": "Buy",
   "vender": "Sell",
-  "section-flats-title": "Opportunities",
+  "section-flats-title": "Properties in Alicante",
   "enviar": "Send",
-  "email": "Email",
+  "email": "E-mail address",
   "newsletter-title": "Subscribe to our newsletter",
-  "blog-showcase-title": "Nosotros nos encargamos de inspirarte",
-  "blog-showcase-subtitle": "Sé el primero en conocer las últimas tendencias, los mejores rincones de Alicante y mucho más",
+  "blog-showcase-title": "Latest trends in the house market",
+  "blog-showcase-subtitle": "Be the first to read about the latest news, the best corners in Alicante and much more!",
   "habitaciones": "rooms",
   "nucleo-sl": "© 2020 Núcleo S.L.",
-  "aviso-legal": "Terms of Service",
-  "politica-datos": "Privacy",
-  "politica-cookies": "Cookies",
+  "aviso-legal": "Legal warning",
+  "politica-datos": "Data protection",
+  "politica-cookies": "Cookies policy",
   "flat": {
-    "name": "Name",
-    "address": "Address",
-    "description": "Description",
+    "name": "House for sale in Centro Histórico · Alicante",
+    "address": "Av. del Mar Nr. 11",
+    "description": "Property description",
     "yearConstruction": "Year of construction",
-    "yearReform": "Year of reform",
+    "yearReform": "Renovation year",
     "price": "Price",
     "rooms": "Rooms",
     "bathrooms": "Bathrooms",
-    "sqrMeters": "Area",
+    "sqrMeters": "Surface",
     "type": "Type",
     "zone": "Zone"
   },
   "flatDetail": {
-    "title": "Flat detail",
+	    "title": "Property details",
     "actions": {
-      "requestInfo": "I'm interested in this property"
+      "requestInfo": "I am interested in this property"
     }
   },
   "calefaccion": "Heating",
@@ -43,16 +43,16 @@
   "yes": "Yes",
   "no": "No",
   "modalForm": {
-    "titleSell": "¿Quieres vender un inmueble?",
-    "titleBuy": "¿Quieres comprar un inmueble?",
-    "name": "Nombre",
-    "lastName": "Apellido",
-    "email": "Correo electrónico",
-    "phone": "Teléfono",
-    "address": "Dirección completa del inmueble",
+    "titleSell": "Do you want to sell a property?",
+    "titleBuy": "Do you want to buy a property?",
+    "name": "Name",
+    "lastName": "Last Name",
+    "email": "E-mail adress",
+    "phone": "Phone Number",
+    "address": "Property´s full adress",
     "send": "Send",
     "cancel": "Cancel",
-    "validateEmail": "El correo electrónico introducido es invalido.",
-    "validateRequired": "Por favor rellene este campo."
+    "validateEmail": "The e-mail you wrote is invalid.",
+    "validateRequired": "Please, fill in this field."
   }
 }
