--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -1,26 +1,26 @@
 {
-  "title": "Título español",
+  "title": "Inmobiliaria en Alicante | Inmobiliaria Nucleo",
   "hero-title-1": "Bienvenido a",
-  "hero-title-2": "Núcleo",
+  "hero-title-2": "Inmobiliaria Núcleo",
   "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante.",
   "idioma": "Idioma",
   "comprar": "Comprar",
   "vender": "Vender",
-  "section-flats-title": "Oportunidades",
+  "section-flats-title": "Viviendas en Alicante",
   "enviar": "Enviar",
   "email": "Correo electrónico",
-  "newsletter-title": "Suscríbete a nuestra Newsletter",
-  "blog-showcase-title": "Nosotros nos encargamos de inspirarte",
-  "blog-showcase-subtitle": "Sé el primero en conocer las últimas tendencias, los mejores rincones de Alicante y mucho más",
+  "newsletter-title": "Suscríbete a nuestro boletín",
+  "blog-showcase-title": "Conoce las tendencias del mercado inmobiliario",
+  "blog-showcase-subtitle": "¡Sé el primero en conocer todas las novedades, los mejores rincones de Alicante y mucho más!",
   "habitaciones": "habitaciones",
   "nucleo-sl": "© 2020 Núcleo S.L.",
   "aviso-legal": "Aviso legal",
   "politica-datos": "Protección de datos",
   "politica-cookies": "Política de cookies",
   "flat": {
-    "name": "Nombre",
-    "address": "Dirección",
-    "description": "Descripción",
+    "name": "Casa en venta en Centro Histórico · Alicante",
+    "address": "Av. del Mar Nr. 11",
+    "description": "Descripción del inmueble",
     "yearConstruction": "Año de construcción",
     "yearReform": "Año de reforma",
     "price": "Precio",
@@ -52,7 +52,7 @@
     "address": "Dirección completa del inmueble",
     "send": "Enviar",
     "cancel": "Cancelar",
-    "validateEmail": "El correo electrónico introducido es invalido.",
-    "validateRequired": "Por favor rellene este campo."
+    "validateEmail": "El correo electrónico introducido es inválido.",
+    "validateRequired": "Por favor, rellene este campo."
   }
 }
