--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -1,5 +1,13 @@
 {
+	"header": {
+		"logo-alt": "Gestión inmobiliaria alicante"
+	},
+	"langCode": "es",
   "title": "Inmobiliaria en Alicante | Inmobiliaria Nucleo",
+	"home": {
+		"description": "Compra-Venta de viviendas en Alicante. Encuentra inmuebles al mejor precio. Visita Inmobiliaria Nucleo y conoce nuestra oferta de casas en venta en Alicante.",
+		"newsletter-input-label": "introduce tu correo para suscribirte a la newsletter"
+},
   "hero-title-1": "Bienvenido a",
   "hero-title-2": "Inmobiliaria Núcleo",
   "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante.",
@@ -9,7 +17,7 @@
   "section-flats-title": "Viviendas en Alicante",
   "enviar": "Enviar",
   "email": "Correo electrónico",
-  "newsletter-title": "Suscríbete a nuestro boletín",
+  "newsletter-title": "Suscríbete a nuestra Newsletter",
   "blog-showcase-title": "Conoce las tendencias del mercado inmobiliario",
   "blog-showcase-subtitle": "¡Sé el primero en conocer todas las novedades, los mejores rincones de Alicante y mucho más!",
   "habitaciones": "habitaciones",
@@ -31,7 +39,8 @@
     "zone": "Zona"
   },
   "flatDetail": {
-    "title": "Detalle del piso",
+    "title": "{type} en venta en {locationcity}, {size}m2,{dormitories}dormitorios, {bathrooms}baños, {price}$. - Inmobiliaria Nucleo",
+		"description": "{type} en venta en calle {locationadress}, ciudad {locationcity}, {size}m2, {dormitories}dormitorios, {baños}baños, {precio}$",
     "actions": {
       "requestInfo": "Me interesa este inmueble"
     }
