--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -39,9 +39,12 @@
     "zone": "Zone"
   },
   "flatDetail": {
-    "title": "{type}for sale in {locationcity}, {size}m2, {dormitories}dormitories, {bathrooms}bathrooms, {price}$ - Inmobiliaria Nucleo",
-		"description": "{type} for sale in adress {locationadress}, {locationcity}city, {size}m2, {dormitories}dormitories, {bathrooms}bathrooms, {price}$.",
-	  "actions": {
+    "title": "{{type}} for sale in {{city}}, {{sqrMeters}} m2, {{dormitories}} dormitories, {{bathrooms}} bathrooms, {{price}}$ - Inmobiliaria Nucleo",
+	  "description": "{{type}} for sale in adress {{address}}, {{city}} city, {{sqrMeters}} m2, {{dormitories}} dormitories, {{bathrooms}} bathrooms, {{price}}$.",
+    "messages": {
+      "recommendedFlats": "You might also like"
+    },
+	"actions": {
       "requestInfo": "I am interested in this property"
     }
   },
@@ -51,6 +54,10 @@
   "orientacion": "Orientation",
   "yes": "Yes",
   "no": "No",
+  "south": "South",
+  "north": "North",
+  "west": "West",
+  "east": "East",
   "modalForm": {
     "titleSell": "Do you want to sell a property?",
     "titleBuy": "Do you want to buy a property?",
