changed flat images

--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -10,7 +10,7 @@
 },
   "hero-title-1": "Bienvenido a",
   "hero-title-2": "Inmobiliaria Núcleo",
-  "hero-subtitle": "Te asesoramos ya sea con la venta como con la compra de inmuebles en Alicante.",
+  "hero-subtitle": "Te asesoramos tanto con la venta como con la compra de inmuebles en Alicante.",
   "idioma": "Idioma",
   "comprar": "Comprar",
   "vender": "Vender",
