hidden buy button in home page

--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -13,7 +13,7 @@
   "hero-subtitle": "Te asesoramos tanto con la venta como con la compra de inmuebles en Alicante.",
   "idioma": "Idioma",
   "comprar": "Comprar",
-  "vender": "Vender",
+  "vender": "Vende tu casa",
   "section-flats-title": "Viviendas en Alicante",
   "enviar": "Enviar",
   "email": "Correo electrónico",
