--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -13,7 +13,7 @@
   "hero-subtitle": "We advise you either with the sale or with the purchase of real estate in Alicante.",
   "idioma": "Language",
   "comprar": "Buy",
-  "vender": "Sell",
+  "vender": "Sell your house",
   "section-flats-title": "Properties in Alicante",
   "enviar": "Send",
   "email": "E-mail address",
