implemented image gallery

--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -36,7 +36,8 @@
     "bathrooms": "Bathrooms",
     "sqrMeters": "Surface",
     "type": "Type",
-    "zone": "Area"
+    "zone": "Area",
+    "pictures": "Photos"
   },
   "flatDetail": {
     "title": "{{type}} for sale in {{address}}, {{city}}. - Inmobiliaria Nucleo",
@@ -45,6 +46,7 @@
       "recommendedFlats": "You might also like"
     },
     "actions": {
+      "showAllPhotos": "Show all photos",
       "requestInfo": "I am interested in this property"
     }
   },
