Replace next-i18next by rosetta (#18)
* using public folder for salesforce images

* linting

* added vercel config

* fix

* fix

* test new blobs

* .

* removed next-i18next

* added rosetta

* fix

* attempt to fix api file excluding

* optimized lambda function

* .

* removed webp (until safari adds support)

* Added image optimization

* remove unnecesary dependency

* added translation fixes

* added default language as html lang attribute

Co-authored-by: Francisco Rubin Capalbo <frubin@mercadona.es>
Co-authored-by: Francisco Rubin <pancho_111203@hotmail.com>

--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -76,11 +76,23 @@
   "cookies": {
     "text": "This site uses profiling cookies to track users. If you continue browsing, we consider you accept it.",
     "detail": {
-      "title": "Cookies policy"
+      "title": "Cookies policy",
+      "description": "Cookies policy"
     },
     "actions": {
       "ok": "OK",
       "moreInfo": "More information"
     }
+  },
+  "flatTypes": {
+    "Piso": "Flat",
+    "Casa": "House",
+    "Casa Rural": "Cottage",
+    "Box/Plaza de garaje": "Parking space",
+    "Terrenos": "Land",
+    "Comercial": "Shop",
+    "Ático": "Loft",
+    "Edificio": "Building",
+    "Trastero": "Storage"
   }
 }
