Changed copy of languageSelector

--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -11,7 +11,7 @@
   "hero-title-1": "Bienvenido a",
   "hero-title-2": "Inmobiliaria Núcleo",
   "hero-subtitle": "Te asesoramos tanto con la venta como con la compra de inmuebles en Alicante.",
-  "idioma": "Idioma",
+  "idioma": "Español",
   "comprar": "Comprar",
   "vender": "Vende tu casa",
   "section-flats-title": "Viviendas en Alicante",
