--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -11,7 +11,7 @@
   "hero-title-1": "Welcome to",
   "hero-title-2": "Inmobiliaria Núcleo",
   "hero-subtitle": "We advise you either with the sale or with the purchase of real estate in Alicante.",
-  "idioma": "Language",
+  "idioma": "English",
   "comprar": "Buy",
   "vender": "Sell your house",
   "section-flats-title": "Properties in Alicante",
