--- a/common/locales/en.json
+++ b/common/locales/en.json
@@ -60,7 +60,7 @@
   "north": "North",
   "west": "West",
   "east": "East",
-  "modalForm": {
+  "contactForm": {
     "titleSell": "Do you want to sell a property?",
     "titleBuy": "Do you want to buy a property?",
     "name": "Name",
@@ -82,6 +82,49 @@
     "actions": {
       "ok": "OK",
       "moreInfo": "More information"
+    }
+  },
+  "sellHouse": {
+    "title": "Sell your house",
+    "metaDescription": "Sell your house",
+    "form": {
+      "title": "Sell your house with us",
+      "subtitle": "Please, rellene el siguiente formulario para ponerse en contacto con el equipo de Núcleo",
+      "subtitle2": "Valoración gratuita y sin compromiso",
+      "send": "Send",
+      "contactUs": "Contact us"
+    },
+    "why": {
+      "title": "¿Por qué vender con nosotros?",
+      "properties": {
+        "professional": {
+          "title": "Profesionalidad",
+          "description": "Desde Núcleo le ofrecemos un servicio completo y personal desde el inicio hasta el fin del proceso de venta"
+        },
+        "fast": {
+          "title": "Rapidez",
+          "description": "Contamos con una red de 18.000 personas que buscan una nueva vivienda"
+        },
+        "experience": {
+          "title": "Experiencia",
+          "description": "El equipo de profesionales de Núcleo conoce bien el mercado inmobiliario y cuenta profundos conocimientos especializados"
+        }
+      }
+    },
+    "houseValue": {
+      "title": "Conozca el valor de su inmueble", 
+      "subtitle": "Le ofrecemos un servicio gratuito de valoración de su inmueble",
+      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nisl non ipsum lacinia sodales. Morbi at purus eu mauris mollis fermentum non eu tellus"
+    },
+    "idealBuyer": {
+      "title": "Encontramos al comprador ideal", 
+      "subtitle": "Encontramos al comprador ideal",
+      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nisl non ipsum lacinia sodales. Morbi at purus eu mauris mollis fermentum non eu tellus"
+    },
+    "adjustNeeds": {
+      "title": "Nos ajustamos a sus necesidades", 
+      "subtitle": "En Núcleo nuestros clientes son lo primero",
+      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nisl non ipsum lacinia sodales. Morbi at purus eu mauris mollis fermentum non eu tellus"
     }
   },
   "flatTypes": {
