--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -127,6 +127,9 @@
       "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nisl non ipsum lacinia sodales. Morbi at purus eu mauris mollis fermentum non eu tellus"
     }
   },
+  "aboutUs": {
+    "title": "¿Quiénes somos?"
+  },
   "flatTypes": {
     "Piso": "Piso",
     "Casa": "Casa",
