--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -128,7 +128,7 @@
     }
   },
   "aboutUs": {
-    "title": "¿Quiénes somos?"
+    "title": "Quiénes somos"
   },
   "flatTypes": {
     "Piso": "Piso",
