--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -9,7 +9,7 @@
   "title": "Inmobiliaria en Alicante | Inmobiliaria Nucleo",
 	"home": {
 		"description": "Compra-Venta de viviendas en Alicante. Encuentra inmuebles al mejor precio. Visita Inmobiliaria Nucleo y conoce nuestra oferta de casas en venta en Alicante.",
-		"newsletter-input-label": "introduce tu correo para suscribirte a la newsletter"
+    "newsletter-input-label": "introduce tu correo para suscribirte a la newsletter"
 },
   "hero-title-1": "Bienvenido a",
   "hero-title-2": "Inmobiliaria Núcleo",
@@ -149,5 +149,9 @@
     "section-2-text": "Formada por profesionales de los sectores inmobiliario y tecnológico con más de 30 años de experiencia, somos la proptech líder en el sector. Unimos lo mejor de los dos mundos: la experiencia de nuestros asesores inmobiliarios y tecnología puntera, para hacer que el proceso de compraventa sea rápido, sencillo y económico.",
     "section-3-title": "¿A dónde vamos?",
     "section-3-text": "Formada por profesionales de los sectores inmobiliario y tecnológico con más de 30 años de experiencia, somos la proptech líder en el sector. Unimos lo mejor de los dos mundos: la experiencia de nuestros asesores inmobiliarios y tecnología puntera, para hacer que el proceso de compraventa sea rápido, sencillo y económico."
+  },
+  "messages": {
+    "subscriptionSuccess": "Revise su correo para completar la suscripción",
+    "subscriptionError": "Hubo un error en el proceso de suscripción. Por favor inténtelo de nuevo"
   }
 }
