--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -56,6 +56,9 @@
   "aireAcondicionado": "A/C",
   "terraza": "Terraza",
   "orientacion": "Orientación",
+  "jardin": "Jardín",
+  "ascensor": "Ascensor",
+  "anio_construccion": "Año construcción",
   "yes": "Sí",
   "no": "No",
   "south": "Sur",
