--- a/common/locales/es.json
+++ b/common/locales/es.json
@@ -44,6 +44,7 @@
   "flatDetail": {
     "title": "{{type}} en venta en {{address}}, {{city}}. - Inmobiliaria Nucleo",
     "description": "{{type}} en venta por {{price}}€. {{rooms}} dormitorio/s, {{bathrooms}} baño/s, {{sqrMeters}} metros cuadrados en {{address}}, {{city}}",
+    "imageCarouselTitle": "{{type}} en {{zone}}",
     "messages": {
       "recommendedFlats": "También le puede interesar"
     },
